[package]
name = "rustjs_reqwest"
version = "0.0.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "rustjs_reqwest"
crate-type = ["cdylib"]

[dependencies]
neon = { git = "https://github.com/bbqsrc/neon" }
reqwest = { version = "0.10.8", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "json", "socks"] }
tokio = { version = "0.2.22", features = ["rt-threaded", "net"] }
once_cell = "1.4.1"

[build-dependencies]
neon-build = { git = "https://github.com/bbqsrc/neon" }
